--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
       "url": "git@github.com:becskei/repo3.git"
   },
   "require": {
-    "becskei/repo3": "6.1"
+    "becskei/repo3": "7.1",
+    "becskei/repo4": "2.1"
   }
 }
